Bug 326827. Don't allow mouse events to target button contents. r+sr=dbaron